fixed issues associated with the portfolio page and modified z-index value for mobile and desktop page

--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -284,13 +284,13 @@ button {
   flex-direction: column;
   position: fixed;
   align-items: center;
-  z-index: 999;
   bottom: 35px;
   right: 0;
   margin-right: 0.5em;
   padding: 1em;
   max-width: 150px;
   overflow-y: hidden;
+  z-index: 1;
 }
 .scrollTopBtn {
   display: none;
@@ -314,6 +314,7 @@ button {
 @media (min-width: 768px) {
   .back-top-btn-wrapper {
     bottom: 70px;
+    z-index: 999;
   }
 }
 @media (min-width: 1200px) {
