--- a/scss/main.scss
+++ b/scss/main.scss
@@ -182,6 +182,7 @@ nav {
     display: flex;
     align-items: center;
     transition: width 1s ease-in-out, right 0.5s ease-in-out;
+    z-index: 999999;
   }
   .increase-width {
     width: 260px;
@@ -786,24 +787,24 @@ nav {
           position: absolute;
           width: 100%;
           height: auto;
-          z-index: 99999;
+          z-index: 999;
           left: 65%;
           top: 35%;
           img {
             width: 100%;
             max-width: 550px;
             height: auto;
+            box-shadow: $next-box-shadow;
+          }
         }
       }
     }
-    .blank-column {
-      min-height: 850px;
-    }
+
     .default-hidden {
       display: block;
+      min-height: 850px;
     }
   }
-}
 }
 
 @media (min-width: $laptop) {
@@ -836,7 +837,7 @@ nav {
         }
       }
     }
-    .blank-column {
+    .default-hidden {
       min-height: 1000px;
     }
   }
